# chip8

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/core/: chip8.c  chip8.h  errors.h  opcodes.c  opcodes.h
src/platform/: platform.c  platform.h
tests/: test.c  test_chip8.c  test_opcodes.c
tests/unit/core/: test_opcodes_unit.c
